--- a/wqredisclient/App.config
+++ b/wqredisclient/App.config
@@ -1,5 +1,46 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+  </configSections>
+  <system.net>
+    <defaultProxy enabled="false">
+      <proxy />
+      <bypasslist />
+      <module />
+    </defaultProxy>
+    <connectionManagement>
+      <add address="*" maxconnection="512"/>
+    </connectionManagement>
+  </system.net>
+  <log4net>
+    <root>
+      <level value="DEBUG" />
+      <appender-ref ref="LogFileAppender" />
+      <appender-ref ref="ConsoleAppender" />
+    </root>
+    <logger name="wqredisclient.logger">
+      <level value="DEBUG"/>
+    </logger>
+    <appender name="LogFileAppender" type="log4net.Appender.FileAppender" >
+      <param name="File" value="aiyaku_branch_cashier.log" />
+      <param name="AppendToFile" value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <param name="Header" value="[Header] "/>
+        <param name="Footer" value="[Footer] "/>
+        <param name="ConversionPattern" value="%d [%t] %-5p %c  - %m%n" />
+      </layout>
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <param name="LevelMin" value="DEBUG" />
+        <param name="LevelMax" value="ERROR" />
+      </filter>
+    </appender>
+    <appender name="ConsoleAppender"  type="log4net.Appender.ConsoleAppender" >
+      <layout type="log4net.Layout.PatternLayout">
+        <param name="ConversionPattern"  value="%d [%t] %-5p %c - %m%n" />
+      </layout>
+    </appender>
+  </log4net>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
     </startup>
