--- a/wqredisclient/wqredisclient.csproj
+++ b/wqredisclient/wqredisclient.csproj
@@ -69,8 +69,12 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="common\ConfigUtils.cs" />
+    <Compile Include="components\ServerListBox.xaml.cs">
+      <DependentUpon>ServerListBox.xaml</DependentUpon>
+    </Compile>
     <Compile Include="entity\AppConfig.cs" />
     <Compile Include="entity\RedisConnection.cs" />
+    <Compile Include="entity\RedisDatabase.cs" />
     <Compile Include="entity\RedisServer.cs" />
     <Compile Include="components\TopButton.xaml.cs">
       <DependentUpon>TopButton.xaml</DependentUpon>
@@ -82,6 +86,10 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="components\ServerListBox.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="components\TopButton.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
