--- a/wqredisclient/wqredisclient.csproj
+++ b/wqredisclient/wqredisclient.csproj
@@ -69,16 +69,21 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="common\ConfigUtils.cs" />
+    <Compile Include="common\RedisKeyUtils.cs" />
     <Compile Include="common\RedisUtils.cs" />
     <Compile Include="components\Loading.xaml.cs">
       <DependentUpon>Loading.xaml</DependentUpon>
     </Compile>
-    <Compile Include="convert\FillConvert.cs" />
-    <Compile Include="convert\VisibleConvert.cs" />
-    <Compile Include="convert\CollapsedConvert.cs" />
+    <Compile Include="convert\CountBrushConvert.cs" />
+    <Compile Include="convert\KeyIconConvert.cs" />
+    <Compile Include="convert\BoolBrushConvert.cs" />
+    <Compile Include="convert\BoolVisibleConvert.cs" />
+    <Compile Include="convert\BoolCollapsedConvert.cs" />
     <Compile Include="entity\AppConfig.cs" />
+    <Compile Include="entity\BaseEntity.cs" />
     <Compile Include="entity\RedisConnection.cs" />
     <Compile Include="entity\RedisDatabase.cs" />
+    <Compile Include="entity\RedisKey.cs" />
     <Compile Include="entity\RedisServer.cs" />
     <Compile Include="components\TopButton.xaml.cs">
       <DependentUpon>TopButton.xaml</DependentUpon>
